# rust-obj-parser

./: .gitignore  Cargo.toml  fake.txt
benches/: add_vertex.rs  bench_parallel_parser.rs  compare_parsers.rs  partion.rs  partition.rs
src/: lib.rs  main.rs  parser.rs  vec2.rs  vec3.rs
src/parser/: mod.rs  thread_pool.rs
src/parser_token/: mod.rs  thread_pool.rs  tokenizer.rs
