[package]
name = "rust_obj_parser"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "*"
nalgebra = "*"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "compare_parsers"
harness = false

[[bench]]
name = "bench_parallel_parser"
harness = false

[profile.release]
debug = true