[package]
name = "rust_obj_parser"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "*"
nalgebra = "*"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "bench_parallel_parser"
harness = false

[[bench]]
name = "partition"
harness = false

[[bench]]
name = "add_vertex"
harness = false

[profile.release]
debug = true